# framework

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.toy.json
.github/workflows/: build.yml  publish.yml
examples/: xor.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-arm64-webgpu/: package.json
npm/darwin-x64/: README.md  package.json
npm/darwin-x64-webgpu/: package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu-cuda/: README.md  package.json
npm/linux-x64-gnu-webgpu/: package.json
scripts/: version.js
src/: index.ts  module.ts  native-loader.ts  nn.ts  optimizer.ts  tensor.ts
src/cutile/: Cargo.toml  README.md  test_loader.mjs  test_napi.mjs
src/cutile/.cargo/: config.toml
src/cutile/benches/: kernels.rs
src/cutile/src/: device.rs  kernels.rs  lib.rs  tensor.rs
src/cutile/src/kernels/: activation.rs  adamw.rs  conv.rs  data.rs  dropout.rs  elementwise.rs  grad_util.rs  kv_quant.rs  matmul.rs  mixed_precision.rs  mod.rs  pooling.rs  reduce.rs
src/cutile/src/ops/: activation.rs  attention.rs  data.rs  dropout.rs  elementwise.rs  embedding.rs  grad_util.rs  kv_quant.rs  loss.rs  matmul.rs  mixed_precision.rs  mod.rs  optimizer.rs  pooling.rs  reduce.rs  softmax.rs
src/cutile/tests/: correctness.rs  fused_ops.rs
src/native/src/: lib.rs  (+5 more)
test/: autograd.test.ts  helpers.ts  loader.js  native.test.ts  run.ts  tensor.test.ts  toy.test.ts
toy/: README.md  index.ts  operators.ts  optimizer.ts  scalar_functions.ts  tensor.ts  tensor_functions.ts  webgpu-shim.d.ts
(+35 files in other folders)
